fix: no wrap for toolbar tooltip

--- a/packages/core/scss/components/_tooltip.scss
+++ b/packages/core/scss/components/_tooltip.scss
@@ -30,6 +30,10 @@
 	.content-box {
 		color: theme.$text-primary;
 
+		.title-tooltip.title-tooltip-nowrap {
+			width: max-content;
+		}
+
 		.title-tooltip {
 			width: auto;
 			padding: 4px;
